fix: clean up markdown pages

--- a/content/about-pages/data.mdx
+++ b/content/about-pages/data.mdx
@@ -1,17 +1,20 @@
 ---
 title: About the data population
+menu: About the data population
+ord: 2
 ---
+
 ## Sources
 
 During the development phase of the SSH Open Marketplace, we identified and
 prioritised trusted sources from which to gather information to populate the SSH
 Open Marketplace. In an initial onboarding phase (first half of 2020), 1,500
 individual resources – tools and services, training materials and workflows -
-were ingested.  After an extended population phase (second half of 2020), the
+were ingested. After an extended population phase (second half of 2020), the
 Beta version of the Marketplace now includes over 5,000 individual items. The
 sources are listed below.
 
-<div className="grid" style={{ gridTemplateColumns: '150px 1fr', gap: '2rem 1rem' }}>
+<div className="grid" style="grid-template-columns: 150px 1fr; gap: 2rem 1rem">
 
 ![TAPoR logo](/assets/images/source_TAPoR_logo.png "TAPoR logo")
 
@@ -38,9 +41,9 @@ find tools that can process your data.
 ![dblp computer science bibliography logo](/assets/images/source_dblp_logo_320x120.png "dblp computer science bibliography logo")
 
 The [dblp computer science bibliography](https://dblp.org/) provides open
-bibliographic information on major computer science journals and
-proceedings. Only a subset of publications related to digital humanities is
-being ingested in the SSH Open Marketplace.
+bibliographic information on major computer science journals and proceedings.
+Only a subset of publications related to digital humanities is being ingested in
+the SSH Open Marketplace.
 
 ![EOSC logo](/assets/images/source_eosc_logo.png "EOSC logo")
 
@@ -61,7 +64,7 @@ possible (see "How to contribute" below).
 The conceptual approach used to structure and classify the content of the SSH
 Open Marketplace led to the identification of 5 main content types.
 
-<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
 
 ![Tool or service](/assets/images/categories/tool-or-service.svg "Tool or service logo")
 
@@ -71,19 +74,19 @@ Open Marketplace led to the identification of 5 main content types.
 
 Materials or products used to perform activities such as:
 
-* Desktop clients solutions (to be installed locally)
-* Browser-based or command-line based resources
-* Mobile apps
-* Programming libraries or APIs
-* Data catalogues
+- Desktop clients solutions (to be installed locally)
+- Browser-based or command-line based resources
+- Mobile apps
+- Programming libraries or APIs
+- Data catalogues
 
-*Example:* Gephi is a visualisation and exploration software for all kinds of
+_Example:_ Gephi is a visualisation and exploration software for all kinds of
 graphs and networks.
 
 </div>
 </div>
 
-<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
 
 ![Training Material](/assets/images/categories/training-material.svg "Training Material")
 
@@ -95,13 +98,13 @@ Tutorials, lessons or didactic resources explaining how to perform an action or
 highlighting the learning outcomes one would gain from engaging with the
 material.
 
-*Example:* The lesson "Beginner's Guide to Twitter Data" (Programming Historian
+_Example:_ The lesson "Beginner's Guide to Twitter Data" (Programming Historian
 website).
 
 </div>
 </div>
 
-<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
 
 ![Workflow](/assets/images/categories/workflow.svg "Workflow logo")
 
@@ -113,13 +116,13 @@ Sequences of operation/steps performed on research data during their lifecycle.
 Workflows can be achieved by using diverse tools and facilities, and useful
 resources are connected to each step.
 
-*Example:* "Extract textual content from images" is a workflow composed of 13
+_Example:_ "Extract textual content from images" is a workflow composed of 13
 steps coming from the Standardization Survival Kit.
 
 </div>
 </div>
 
-<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
 
 ![Dataset](/assets/images/categories/dataset.svg "Dataset logo")
 
@@ -128,15 +131,15 @@ steps coming from the Standardization Survival Kit.
 ### Datasets
 
 Single digital objects or collections of data, records, or information that is
-kept as a persistent unit of information  in  the  knowledge  generation 
-process.  Datasets  are  used  as  evidence  for  some phenomena.
+kept as a persistent unit of information in the knowledge generation process.
+Datasets are used as evidence for some phenomena.
 
-*Example:* Parlamint 1.0
+_Example:_ Parlamint 1.0
 
 </div>
 </div>
 
-<div className="grid" style={{ gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
 
 ![Publication](/assets/images/categories/publication.svg "Publication logo")
 
@@ -148,14 +151,13 @@ Research results published in academic journals or repositories. The SSH Open
 Marketplace references only publications that can be connected to other
 resources and is not an exhaustive collection of papers.
 
-*Example:* "PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry
+_Example:_ "PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry
 Corpora" is a Conference Paper presented during the DH2020 Conference in which
 you can find an example of use of the SpaCy library (referenced as a tool in the
 SSH Open Marketplace).
 
 </div>
 </div>
-
 
 ## Inclusion crietria
 
@@ -175,27 +177,29 @@ Currently the curation criteria fall into three categories.
    The broad scope of the SSH Open Marketplace means that to be selected, any
    resource must fulfill at least two criteria:
 
-   * Relevance for science and scientists
-   * Pertinence to the digital methodologies used within the SSH landscape
+   - Relevance for science and scientists
+   - Pertinence to the digital methodologies used within the SSH landscape
 
-   Selection decisions are made by  Moderators. Particularly for resources such
+   Selection decisions are made by Moderators. Particularly for resources such
    as technical services or software, the SSH link could be very loose. In such
    cases the relevance may be assessed in terms of the uptake or prominence of a
    resource within the SSH community.
+
 2. **Technical**
 
    Ideally, two technical curation criteria should be met by any resource:
 
-   * Current and supported
-   * Open
+   - Current and supported
+   - Open
 
    The SSH Open Marketplace favours the uptake of Open Science workflows and
    open research practices. Software resources are preferably built upon open
    source solutions.
 
-   Note: Given that the SSH Open Marketplace seeks to  mirror actual research
+   Note: Given that the SSH Open Marketplace seeks to mirror actual research
    practices, commercial or non-current resources are also referenced where
    these are relevant for the scientific community.
+
 3. **Legal/Ethical**
 
    By design, the SSH Open Marketplace maximises the findability and re-use of
@@ -204,10 +208,10 @@ Currently the curation criteria fall into three categories.
    tools, services or training materials that can help them in their
    FAIRification workflows.
 
-   Of necessity, the SSH Open Marketplace is  GDPR compliant . This is reflected
+   Of necessity, the SSH Open Marketplace is GDPR compliant . This is reflected
    in the manner of presentation of the resources and – more obviously – in the
    management of users.
 
-During the course of  2021, **Editorial Guidelines** will be added to this page.
+During the course of 2021, **Editorial Guidelines** will be added to this page.
 
 ## The data lifecycle
