--- a/content/contribute-pages/suggest-a-source.mdx
+++ b/content/contribute-pages/suggest-a-source.mdx
@@ -1,5 +1,8 @@
 ---
-title: "Suggest a source "
+title: Suggest a source
+menu: Suggest a source
+ord: 3
 ---
-- Contact - generic email 
+
+- Contact - generic email
 - Pointing to sources selection criteria
