--- a/content/about-pages/implementation.mdx
+++ b/content/about-pages/implementation.mdx
@@ -1,6 +1,9 @@
 ---
 title: Technical aspects
+menu: Technical aspects
+ord: 3
 ---
+
 ## Data model
 
 The data model of the SSH Open Marketplace was designed to be generic and
@@ -10,7 +13,7 @@ model was presented in the
 Some adjustments were made while ingesting the first sources, and version 1.4 of
 the SSH Open Marketplace is currently being implemented.
 
-## Data ingestion workflow 
+## Data ingestion workflow
 
 The SSH Open Marketplace provides a REST API at the backend where data can not
 only be read but also inserted or updated. This approach allows
@@ -26,7 +29,7 @@ Open Marketplace via the API.
 
 ![Data ingestion workflow](/assets/images/data_ingestion_workflow.png "Data ingestion workflow")
 
-*Illustration: Overview on the different parts of the ingestion workflow*
+_Illustration: Overview on the different parts of the ingestion workflow_
 
 ## Information about the development of the website
 
