--- a/content/contribute-pages/overview.mdx
+++ b/content/contribute-pages/overview.mdx
@@ -1,20 +1,44 @@
 ---
 title: Overview
+menu: Overview
+ord: 1
 ---
-The Social Sciences and Humanities Open Marketplace needs you! The SSH Open Marketplace is the result of collective and collaborative efforts and you are very welcome to contribute as well! You will find on these pages a summary of the different ways you can get involved. 
 
+The Social Sciences and Humanities Open Marketplace needs you! The SSH Open
+Marketplace is the result of collective and collaborative efforts and you are
+very welcome to contribute as well! You will find on these pages a summary of
+the different ways you can get involved.
 
-**As a visitor** of the SSH Open Marketplace, and without any account, you can report an issue, leave a comment or reach out to the SSH Open Marketplace Editorial Team. Help us to improve the service, or just let us know what you think or how we can help. We are always happy to get in touch with curious visitors or new comers! 
+**As a visitor** of the SSH Open Marketplace, and without any account, you can
+report an issue, leave a comment or reach out to the SSH Open Marketplace
+Editorial Team. Help us to improve the service, or just let us know what you
+think or how we can help. We are always happy to get in touch with curious
+visitors or new comers!
 
+**As a contributor**, you can help us to improve the SSH Open Marketplace
+data/content. There are two main ways to populate the Marketplace - the mass
+ingestion of sources & the creation of individual items - and you can also
+improve the quality of existing records. All you need to know for these
+contributions is explained in these pages:
 
-**As a contributor**, you can help us to improve the SSH Open Marketplace data/content. There are two main ways to populate the Marketplace - the mass ingestion of sources & the creation of individual items - and you can also improve the quality of existing records. All you need to know for these contributions is explained in these pages:
+1. The mass ingests are managed by the Editorial Team, but you can Suggest a new
+   source
 
-1. The mass ingests are managed by the Editorial Team, but you can Suggest a new source
+2. You would like to improve an item you've found on the SSH Open Marketplace,
+   to add a relation between two (or more) items, just get in and follow our
+   recommendations to edit and enrich existing items
 
-2. You would like to improve an item you’ve found on the SSH Open Marketplace, to add a relation between two (or more) items, just get in and follow our recommendations to edit and enrich existing items
+3. You have noticed that your favorite tool or training material is not
+   referenced in the SSH Open Marketplace and you would like to add it, follow
+   our guidelines to create an individual item
 
-3. You have noticed that your favorite tool or training material is not referenced in the SSH Open Marketplace and you would like to add it, follow our guidelines to create an individual item
+As a **moderator** or **administrator**, you are a member of the Editorial Team,
+and you have some missions to ensure the SSH Open Marketplace quality. The
+moderator guidelines and the administrator guidelines are the public
+documentation providing an overview of these missions.
 
-As a **moderator** or **administrator**, you are a member of the Editorial Team, and you have some missions to ensure the SSH Open Marketplace quality. The moderator guidelines and the administrator guidelines are the public documentation providing an overview of these missions.
-
-Are you interested to join the editorial team? Get in touch with us! And if you liked the SSH Open Marketplace, speak about it around you and help us to promote this discovery service. Here are some useful materials: xxxx. Let us know when and where you have acted as an ambassador of the Marketplace and contact us if you need additional information!
+Are you interested to join the editorial team? Get in touch with us! And if you
+liked the SSH Open Marketplace, speak about it around you and help us to promote
+this discovery service. Here are some useful materials: xxxx. Let us know when
+and where you have acted as an ambassador of the Marketplace and contact us if
+you need additional information!
