--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -4,4 +4,4 @@ title: Social Sciences & Humanities Open Marketplace
 
 Discover new and contextualised resources for your research in Social Sciences
 and Humanities: tools, services, training materials, workflows and datasets.
-[Read more...](/about)
+[Read more...](/about/service)
